--- a/TflAppVS.Functions/TflAppVS.Functions.csproj
+++ b/TflAppVS.Functions/TflAppVS.Functions.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Folder Include="TflApis\" />
     <Folder Include="Resources\" />
+    <Folder Include="TflDtos\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NUnit" Version="3.12.0" />
