--- a/TflAppVS.Functions/TflAppVS.Functions.csproj
+++ b/TflAppVS.Functions/TflAppVS.Functions.csproj
@@ -18,4 +18,12 @@
   <ItemGroup>
     <ProjectReference Include="..\TflAppVS.Configuration\TflAppVS.Configuration.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="local.settings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\Colours.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
