--- a/TflAppVS.WebApp/TflAppVS.WebApp.csproj
+++ b/TflAppVS.WebApp/TflAppVS.WebApp.csproj
@@ -5,8 +5,32 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="$(AspNetCoreAppRuntimeFrameworkVersion)">
+      <IsImplicitlyDefined>true</IsImplicitlyDefined>
+      <PrivateAssets>all</PrivateAssets>
+      <Publish>true</Publish>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.0.18" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TflAppVS.Functions\TflAppVS.Functions.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="local.settings.json" />
+    <Content Remove="Colours.json" />
+    <Content Remove="Resources\Colours.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="local.settings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\Colours.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
 </Project>
