--- a/TflAppVS.Functions/TflAppVS.Functions.csproj
+++ b/TflAppVS.Functions/TflAppVS.Functions.csproj
@@ -22,5 +22,8 @@
     <None Update="local.settings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\Colours.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
